fix: fix LayoutFlexColumn horizontal align bug

--- a/src/scss/_LayoutFlexColumn.scss
+++ b/src/scss/_LayoutFlexColumn.scss
@@ -23,17 +23,17 @@
 
 	// horizontal align
 	&--horizontal-align-left {
-		align-items: start;
+		justify-items: start;
 	}
 	&--horizontal-align-center {
-		align-items: center;
+		justify-items: center;
 	}
 	&--horizontal-align-right {
-		align-items: end;
+		justify-items: end;
 	}
 	&--horizontal-align-default,
 	&--horizontal-align-stretch {
-		align-items: stretch;
+		justify-items: stretch;
 	}
 
 	@each $layout-spacing-key, $layout-spacing-value in $layout-spacing-map {
